<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/action_refresh"/>
    
    <item
        android:id="@+id/action_hymn"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_hymn"/>
    
    <item
        android:id="@+id/action_light"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_light"/>

</menu>