<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_main"
                android:background="@color/white_transparent"
                android:gravity="center"
                android:padding="@dimen/d5p"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_transparent"
                android:gravity="center"
                android:padding="@dimen/d5p"
                android:text="@string/welcome_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_transparent"
                android:gravity="center"
                android:padding="@dimen/d5p"
                android:text="@string/welcome_new"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button" />

</LinearLayout>